--- a/mip_convert.cfg
+++ b/mip_convert.cfg
@@ -3,44 +3,44 @@
 [cmor_setup]
 cmor_log_file = cmor.log
 create_subdirectories = 0
-mip_table_dir = gcmodeldev-cmor-tables/tables #/home/h03/cdds/etc/mip_tables/GCModelDev/0.0.4
+mip_table_dir = gcmodeldev-cmor-tables/tables
 netcdf_file_action = CMOR_REPLACE_4
 
 [cmor_dataset]
-branch_method = no parent
-parent_experiment_id = no parent
-calendar = 360_day   # can be 365_day or gregorian
-experiment_id = mohc1
+branch_method = standard
+parent_experiment_id = HadREM3-GC3.1-N512
+calendar = 360_day
+experiment_id = hindcast
 grid = Native grid
 grid_label = gn
 institution_id = MOHC
-license = GCModelDev model data is licensed under the Open Government License v3 (https://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/)
-mip = UCC
+license = tbc
+mip = CSSPBrazil
 mip_era = GCModelDev 
-model_id = HadREM3-GA7-05
-model_type = AOGCM AER
+model_id = HadREM3-RAL1T-UM10.6
+model_type = LAM
 nominal_resolution = 250 km
 output_dir = .   # this is where the output files will be written to
 sub_experiment_id = none
-variant_label = r1i1p1f3
+variant_label = r1i2p1f1
 
 [request]
-ancil_files = /project/cdds/etc/ancil/HadGEM3-GC31-LL/qrparm.landfrac.pp /project/cdds/etc/ancil/HadGEM3-GC31-LL/qrparm.soil.pp /project/cdds/etc/ancil/HadGEM3-GC31-LL/ocean_constants.nc /project/cdds/etc/ancil/HadGEM3-GC31-LL/ocean_byte_masks.nc /project/cdds/etc/ancil/HadGEM3-GC31-LL/ocean_basin.nc /project/cdds/etc/ancil/HadGEM3-GC31-LL/diaptr_basin_masks.nc /project/cdds/etc/ancil/HadGEM3-GC31-LL/ocean_zostoga.nc
-atmos_timestep = 1200
-child_base_date = 1850-01-01-00-00-00
+ancil_files =
+atmos_timestep = 1440
+child_base_date = 1997-01-01-00-00-00
 deflate_level = 2
 hybrid_heights_files = /project/cdds/etc/vertical_coordinates/atmosphere_theta_levels_85.txt /project/cdds/etc/vertical_coordinates/atmosphere_rho_levels_86.txt
-model_output_dir = ./input/  # This is where PP files need to be located, structure input/suite-id/stream/files.pp
+model_output_dir = ./input/mi-ba751/apa/*.pp  # for 1998-01 to 2002-12 use mi-ba751; for 2003-01 to 2007-12 use mi-bb055
 replacement_coordinates_file = /project/cdds/etc/horizontal_coordinates/cice_eORCA1_coords.nc
-run_bounds = 1997-01-01-00-00-00 1997-01-09-00-00-00
+run_bounds = 1998-01-01-00-00-00 1998-12-31-00-00-00
 shuffle = True
 sites_file = /project/cdds/etc/cfmip2/cfmip2-sites-orog.txt
-suite_id = mi-ba488
+suite_id = mi-ba751
 
 [global_attributes]
-additional_info = http://wiki.page.goes.here
+additional_info = https://github.com/MetOffice/Brazil_cprcm_CMORise
 
 
 [stream_apa]
-GCModelDev_day = tas
+GCModelDev_day = pr
 
